<resources>
    <string name="app_name">PlaylistMaker1</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="Settings">Настройки</string>
    <string name="todo">todo</string>
    <string name="Theme">Темная тема</string>
    <string name="shareit">Поделится приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="useragrement">Пользовательское соглашение</string>
    <string name="playlistmaker">PlaylistMaker</string>
    <string name="search_edit_hint">Поиск</string>
    <string name="terms_of_use_link" />
    <string name="share_text" />
    <string name="offerlink">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear">Clear</string>
    <string name="support_email_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="my_email">PaladinPlay@yandex.ru</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="track_image">Обложка</string>
    <string name="track_name">Smells Like Teen Spirit</string>
    <string name="track_author">Nirvana</string>
    <string name="track_timing">2:55</string>
    <string name="no_song">Ничего не нашлось</string>
    <string name="no_internet_first_line">Проблемы со связью</string>
    <string name="no_internet_second_line">" "</string>
    <string name="no_internet_third_line">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="iTunes_link">https://itunes.apple.com/</string>
    <string name="back_arrow_button">Back Button</string>
    <string name="image_cover">image cover</string>
    <string name="add_to_collection">Список треков</string>
    <string name="play">Начать воспроизведение</string>
    <string name="add_to_favorite">Добавить в любимое</string>
    <string name="placeholderCurrentTrack">0:00</string>
    <string name="duration">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="You_search">Вы искали</string>
    <string name="remove_history">Очистить историю</string>
    <string name="dark_mode">Темная тема</string>
    <string name="Duration">Длительность</string>
    <string name="not_specified">Не указано\n</string>
</resources>