<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    android:background="@color/white"
    android:paddingLeft="@dimen/main_padding"
    android:paddingRight="@dimen/main_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/arrow_back_foreground"
            app:tint="@color/settings_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/settings"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/title_size" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher1"
        style="@style/SettingTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="20dp"
        android:text="@string/Theme"
        android:textColor="@color/settings_text_color"
        android:textSize="16sp"
        android:thumbTintMode="screen" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsShareTxt"
        style="@style/SettingTextStyle"
        android:drawableEnd="@drawable/shareico_foreground"
        android:text="@string/shareit" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportBtnTxt"
        style="@style/SettingTextStyle"
        android:drawableEnd="@drawable/supportico_foreground"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forwardButtonTxt"
        style="@style/SettingTextStyle"
        android:drawableEnd="@drawable/shareit_foreground"
        android:text="@string/useragrement" />

</LinearLayout>
