<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3772E7"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:animateLayoutChanges="true"
        android:padding="12dp"
        android:text="PlaylistMaker"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:fontFamily="@font/ys_display_medium"/>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_marginTop="132dp"
        android:orientation="vertical"
        app:layout_anchor="@+id/content_layout"

        app:layout_anchorGravity="center_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/SearchButton"
            style="@style/MainScreenButtonStyle"

            android:layout_marginBottom="8dp"
            android:text="@string/search"
            app:cornerRadius="16dp"
            app:icon="@drawable/lens" />

        <Button
            android:id="@+id/MediaButton"
            style="@style/MainScreenButtonStyle"
            android:layout_marginBottom="8dp"
            android:text="@string/media_library"
            app:cornerRadius="16dp"
            app:icon="@drawable/media" />

        <Button
            android:id="@+id/SettingsButton"
            style="@style/MainScreenButtonStyle"

            android:text="@string/settings"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings" />
    </LinearLayout>
</LinearLayout>