<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/setting_bg"
    android:paddingLeft="@dimen/main_padding"
    android:paddingRight="@dimen/main_padding"
    tools:context=".SearchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,UseCompoundDrawables">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_back_foreground"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:tint="@color/settings_text_color"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="12dp"
            android:text="@string/search"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/title_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="8dp"
        android:background="@drawable/edittext_background"
        android:backgroundTint="@color/search_background"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp">

            <EditText
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/lensedittext"
                android:id="@+id/search_edit_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@color/search_background"
                android:focusable="true"
                android:focusedByDefault="true"
                android:fontFamily="@font/ys_display_medium"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/search_hint"
                android:textCursorDrawable="@drawable/line_l_svgrepo_com"
                android:textSize="16sp"
                app:endIconMode="clear_text"
                />

            <ImageButton
                android:id="@+id/search_clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:paddingVertical="14dp"
                android:paddingHorizontal="14dp"
                android:visibility="gone"
                android:background="@color/search_background"
                android:src="@drawable/clear"
                app:tint="@color/search_clear_icon" />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/yourSearch"
        android:visibility="visible"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        style="@style/Placeholder"
        android:text="@string/You_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="visible"
        android:id="@+id/trackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/clean_history_button"
        android:visibility="visible"
        style="@style/Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/remove_history"
        android:textAllCaps="false" />


    <LinearLayout
        android:id="@+id/no_song"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                 android:layout_gravity="center"
            android:src="@drawable/no_song" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"

            android:text="@string/no_song" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_internet"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/no_internet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Placeholder"
                android:text="@string/no_internet_first_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Placeholder"
                android:text="@string/no_internet_second_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Placeholder"
                android:text="@string/no_internet_third_line" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/Update"
                android:text="@string/update"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>